# bnfgen

./: .gitignore  LICENSE  README.md  _oasis  _tags  bnfgen.opam  cfgen.opam  dune-project  grammar.ml  lexer.mll  main.ml  myocamlbuild.ml  opam  parser.mly  setup.ml
.github/workflows/: main.yml
examples/: 00_test_no_alteration.bnf  01_test_alteration.bnf  02_english.bnf  03_brainfuck.bnf  04_serials.bnf  05_newspeak.bnf
src/: bnf_lexer.mll  bnf_parser.messages  bnf_parser.mly  bnf_parser_messages.ml  bnfgen.ml  bnfgen_cli.ml  bnfgenlib.ml  bnfgenlib.mli  cfgen.ml  dune  grammar.ml  grammar.mli  lexer.mll  parse_bnf.ml  parser.mly  util.ml  util.mli
src/lib/: bnf_lexer.mll  bnf_parser.messages  bnf_parser.mly  bnfgen.ml  bnfgen.mli  dune  grammar.ml  grammar.mli  parse_bnf.ml  util.ml
